force-app/main/default/objects/geopointe__GP_Assignment_Area__c/geopointe__GP_Assignment_Area__c.object-meta.xml
<CustomObject>
    <description>Relates Geopointe Shape data to a Geopointe Assignment Plan.</description>
    <label>Geopointe Assignment Area</label>
    <nameField>
        <label>Geopointe Assignment Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Assignment Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>