force-app/main/default/objects/geopointe__GP_Assignment_Area__c/fields/geopointe__Assignment_Plan__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Assignment_Plan__c</fullName>
    <label>Geopointe Assignment Plan</label>
    <referenceTo>geopointe__GP_Assignment_Plan__c</referenceTo>
    <relationshipLabel>Geopointe Assignment Areas</relationshipLabel>
    <relationshipName>Geopointe_Assignment_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>