force-app/main/default/objects/geopointe__GP_Assignment_Area__c/fields/geopointe__Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Field_Mapping__c</fullName>
    <description>Maps Assignment Area custom fields to the assigned record.</description>
    <label>Field Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>