force-app/main/default/objects/geopointe__GP_Assignment_Area__c/fields/geopointe__Shape__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Shape__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Geopointe Shape</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR (2 AND 3)</booleanFilter>
        <filterItems>
            <field>geopointe__Shape__c.geopointe__Usage_Type__c</field>
            <operation>equals</operation>
            <value>GeoShape,Standard</value>
        </filterItems>
        <filterItems>
            <field>geopointe__Shape__c.geopointe__Usage_Type__c</field>
            <operation>equals</operation>
            <value>Shape Field</value>
        </filterItems>
        <filterItems>
            <field>geopointe__Shape__c.geopointe__Type__c</field>
            <operation>equals</operation>
            <value>Polygon, Circle, MultiPolygon</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>geopointe__Shape__c</referenceTo>
    <relationshipLabel>Geopointe Assignment Areas</relationshipLabel>
    <relationshipName>Geopointe_Assignment_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>