force-app/main/default/objects/geopointe__GP_Assignment_Area__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Assignment_Plan__c</columns>
    <columns>geopointe__Shape__c</columns>
    <columns>geopointe__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>